--- a/clinic_lab/templates/index.html
+++ b/clinic_lab/templates/index.html
@@ -33,7 +33,7 @@
 
     <main class="content">
         <section id="about" class="section about-section">
-            <h2>О проекте</h2>
+            <h2><a href="http://127.0.0.1:8000/about/">О проекте</a></h2>
             <p>{{ project_description }}</p>
         </section>
         <section class="section features-section">
