feat: add new model

--- a/clinic_lab/templates/clinical_recommendation_detail.html
+++ b/clinic_lab/templates/clinical_recommendation_detail.html
@@ -50,6 +50,14 @@
           {{ recommendation.Brief_information|linebreaks }}
         </div>
       </div>
+
+      <div class="detail-item">
+        <h3>Лабораторные диагностические исследования</h3>
+        <div class="content">
+          {{ recommendation.Laboratory_diagnostic_tests|linebreaks }}
+        </div>
+      </div>
+
     </section>
     
     <footer class="footer">
