--- a/clinic_lab/templates/index.html
+++ b/clinic_lab/templates/index.html
@@ -57,7 +57,7 @@
 
     <footer class="footer">
         <p>&copy; 2025 {{ author_name }}. Все права защищены.</p>
-        <p><a href="https://github.com/username/project">GitHub проекта</a></p>
+        <p><a href="https://github.com/GazingStars/django_project">GitHub проекта</a></p>
     </footer>
 
     <script>
